// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute x30 api should return success 1`] = `
{
  "data": {
    "payload": {
      "ADA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ALGO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ATOM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "AVAX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BCH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BNB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BUSD": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "CRO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DAI": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DOGE": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DOT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ETC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ETH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "FTX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LEO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LINK": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "MATIC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "NEAR": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "SHIB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "SOL": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "TRX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "UNISWAP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "USDC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "USDTERC20": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XCN": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XLM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XMR": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XRP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
    },
    "result": 63605349.41204809,
    "sources": [],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 63605349.41204809,
  "statusCode": 200,
}
`;

exports[`execute xbci api should return success 1`] = `
{
  "data": {
    "payload": {
      "AAVE": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ADA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ALGO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ATOM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BAT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BCH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BNB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BTT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "COMP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "CRO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DGB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DOT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "EOS": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ETH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "HT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ICX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "KNC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "KSM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LINK": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "MIOTA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "MKR": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "NEO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "OKB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "OMG": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ONT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "QTUM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "REN": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "SNX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "THETA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "TRX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "UMA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "VET": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XEM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XLM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XRP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XTZ": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "YFI": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ZRX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
    },
    "result": 2834939.3645164976,
    "sources": [],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 2834939.3645164976,
  "statusCode": 200,
}
`;

exports[`execute xlci api should return success 1`] = `
{
  "data": {
    "payload": {
      "AAVE": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ADA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ALGO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ATOM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BAT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BCH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BNB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "BTT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "COMP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "CRO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DGB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DOGE": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "DOT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "EOS": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ETH": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "HT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ICX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "KNC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "KSM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LINK": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "LTC": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "MIOTA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "MKR": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "NEO": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "NXM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "OKB": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "OMG": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ONT": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "QTUM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "REN": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "SNX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "THETA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "TRX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "UMA": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "VET": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XEM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XLM": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XRP": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "XTZ": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "YFI": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
      "ZRX": {
        "quote": {
          "USD": {
            "price": 100,
          },
        },
      },
    },
    "result": 59533.932415336036,
    "sources": [],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 59533.932415336036,
  "statusCode": 200,
}
`;
